force-app/main/default/objects/CP_Module_Config__c/CP_Module_Config__c.object-meta.xml
<CustomObject>
    <description>Single-record configuration for the Channel Partner module. Stores all business parameters (source names, status values, credit days, etc.) so that zero values are hardcoded in Apex.</description>
    <label>CP Module Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CP Module Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>