force-app/main/default/objects/CP_Module_Config__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <defaultValue>&quot;Pre-Sales&quot;</defaultValue>
    <description>Round-robin assignment type for lead assignment (e.g., Pre-Sales, Sales).</description>
    <label>Assignment Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>