force-app/main/default/objects/CP_Module_Config__c/fields/CP_Active_Statuses__c.field-meta.xml
<CustomField>
    <fullName>CP_Active_Statuses__c</fullName>
    <description>JSON array of CP statuses that are considered active/eligible for lead submission. Example: [&quot;Approved&quot;,&quot;Active&quot;]</description>
    <label>CP Active Statuses (JSON)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>