force-app/main/default/objects/CP_Module_Config__c/fields/CP_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>CP_Approval_Process__c</fullName>
    <defaultValue>&quot;CP_Registration_Approval&quot;</defaultValue>
    <description>API name of the approval process to auto-submit after CP registration.</description>
    <label>CP Approval Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>