force-app/main/default/objects/CP_Module_Config__c/fields/CP_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Source_Name__c</fullName>
    <defaultValue>&quot;Channel Partner&quot;</defaultValue>
    <description>The source name used when a CP submits a lead (e.g., Channel Partner, Broker).</description>
    <label>CP Source Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>