force-app/main/default/objects/CP_Module_Config__c/fields/Credit_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Active_Status__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <description>Status value for active CP credits.</description>
    <label>Credit Active Status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>