force-app/main/default/objects/CP_Module_Config__c/fields/Credit_Expired_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expired_Status__c</fullName>
    <defaultValue>&quot;Expired&quot;</defaultValue>
    <description>Status value for expired CP credits.</description>
    <label>Credit Expired Status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>