force-app/main/default/objects/CP_Module_Config__c/fields/Credit_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expiry_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Number of days after which CP credit expires.</description>
    <label>Credit Expiry Days</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>