force-app/main/default/objects/CP_Module_Config__c/fields/Lead_Default_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Default_Status__c</fullName>
    <defaultValue>&quot;New Enquiry&quot;</defaultValue>
    <description>Default lead status when a new lead is created or a closed lead is re-opened.</description>
    <label>Lead Default Status</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>