force-app/main/default/objects/CP_Module_Config__c/fields/Lead_Inactive_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Lead_Inactive_Statuses__c</fullName>
    <description>JSON array of lead statuses that are considered inactive/closed for dedup purposes. Example: [&quot;Unqualified&quot;,&quot;Closed Lost&quot;,&quot;Booked&quot;]</description>
    <label>Lead Inactive Statuses (JSON)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>