force-app/main/default/objects/CP_Module_Config__c/fields/Lead_Reengaged_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reengaged_Type__c</fullName>
    <defaultValue>&quot;Re-engaged&quot;</defaultValue>
    <description>Lead Type value when an active lead is re-engaged from a new source.</description>
    <label>Lead Re-engaged Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>