force-app/main/default/objects/CP_Module_Config__c/fields/Lead_Reopened_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Reopened_Type__c</fullName>
    <defaultValue>&quot;Re-opened&quot;</defaultValue>
    <description>Lead Type value when a closed lead is re-opened.</description>
    <label>Lead Reopened Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>